@startuml

title __CLONECODE's Class Diagram__\n

  namespace ExamReviewer {
    namespace Analysis {
      namespace CloneCode {
        class ExamReviewer.Analysis.CloneCode.AnalyzeClone1Code1Item {
            + AnalyzeContent()
            - selectClones()
        }
      }
    }
  }
  

  namespace ExamReviewer {
    namespace Analysis {
      namespace CloneCode {
        class ExamReviewer.Analysis.CloneCode.AnalyzeClone1StudentNItem {
            + AnalizedContent()
            + AnalyzeClone1StudentNItem()
        }
      }
    }
  }
  

  ExamReviewer.Analysis.CloneCode.AnalyzeClone1Code1Item -up-|> ExamReviewer.Analysis.Analyze1Code1Item
  ExamReviewer.Analysis.CloneCode.AnalyzeClone1StudentNItem -up-|> ExamReviewer.Analysis.Analyze1StudentNItem


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
